// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerAccount Props Forwarding forwards hitSlop prop to PickerBase 1`] = `
<TouchableOpacity
  activeOpacity={1}
  hitSlop={
    {
      "bottom": 10,
      "left": 15,
      "right": 15,
      "top": 10,
    }
  }
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#b7bbc8",
      "borderRadius": 4,
      "borderWidth": 0,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="account-label"
  >
    Orangefox.eth
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="ArrowDown"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</TouchableOpacity>
`;

exports[`PickerAccount Props Forwarding forwards style prop 1`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#b7bbc8",
      "borderRadius": 4,
      "borderWidth": 0,
      "flexDirection": "row",
      "marginTop": 20,
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="account-label"
  >
    Orangefox.eth
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="ArrowDown"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</TouchableOpacity>
`;

exports[`PickerAccount Rendering should render correctly with snapshot 1`] = `
<TouchableOpacity
  activeOpacity={1}
  onPress={[MockFunction]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#b7bbc8",
      "borderRadius": 4,
      "borderWidth": 0,
      "flexDirection": "row",
      "padding": 16,
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      {
        "color": "#121314",
        "fontFamily": "Geist Medium",
        "fontSize": 16,
        "letterSpacing": 0,
        "lineHeight": 24,
      }
    }
    testID="account-label"
  >
    Orangefox.eth
  </Text>
  <SvgMock
    color="#121314"
    fill="currentColor"
    height={16}
    name="ArrowDown"
    style={
      {
        "height": 16,
        "marginLeft": 8,
        "width": 16,
      }
    }
    width={16}
  />
</TouchableOpacity>
`;
